# learnpy

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: test.yml
exercise_tests/: test_0000_intro.py  test_0001_print.py  test_0002_import.py  test_0003_arithmetic.py  test_0004_lists.py  test_0005_dicts.py  test_0006_sets.py  test_0007_tuples.py  test_0008_collections.py  test_0009_if.py  test_0010_ifelseif.py  test_0011_ifelse.py  test_0012_for.py  test_0013_while.py  test_0014_functions.py  test_0018_types.py  test_0020_classes.py  test_0023_exceptions.py  test_0024_files.py
exercises/: 0000_intro.py  0001_print.py  0002_import.py  0003_arithmetic.py  0004_lists.py  0005_dicts.py  0006_sets.py  0007_tuples.py  0008_collections.py  0009_if.py  0010_ifelseif.py  0011_ifelse.py  0012_for.py  0013_while.py  0014_functions.py  0015_functions2.py  0018_types.py  0020_classes.py  0021_classes2.py  0023_exceptions.py  0024_files.py  9999_test.py
resources/: info.toml
src/: __init__.py  controller.py  main.py  runner.py  textual_app.py
src/components/: exercises_screen.py  welcome_screen.py
src/exercises/: 0001_print.py
src/model/: exercise.py  exercises.py
src/resources/styles/: learnpy.tcss
src/services/: exercise.py
src/services/communication/: queue.py
src/services/file_watcher/: file_watcher_event_handler.py  utils.py
tests/: test_0001_print.py  test_0003_arithmetic.py  test_exercises_load.py
